--- a/example/config.yml
+++ b/example/config.yml
@@ -8,6 +8,7 @@ collections: # A list of collections the CMS should be able to edit
     label: "Post" # Used in the UI, ie.: "New Post"
     folder: "_posts"
     slug: "{{year}}-{{month}}-{{day}}-{{slug}}"
+    frontmatter: 'yaml'
     create: true # Allow users to create new documents in this collection
     fields: # The fields each document in this collection have
       - {label: "Title", name: "title", widget: "string", tagname: "h1"}
@@ -20,6 +21,9 @@ collections: # A list of collections the CMS should be able to edit
   - name: "faq" # Used in routes, ie.: /admin/collections/:slug/edit
     label: "FAQ" # Used in the UI, ie.: "New Post"
     folder: "_faqs"
+    frontmatter:
+      format: 'toml'
+      delims: '~~~'
     create: true # Allow users to create new documents in this collection
     fields: # The fields each document in this collection have
       - {label: "Question", name: "title", widget: "string", tagname: "h1"}
